--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
   <section class="container">
     <div class="top-content">
-      <img class="image" src="/images/image-header-mobile.jpg" alt="imagesofpeople">
+      <img class="image" src="image-header-mobile.jpg" alt="imagesofpeople">
     </div>
     <div class="bottom-content">
       <div class="top">
